[package]
name = "ruukh"
version = "0.1.0"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.21"
indexmap = "1.0.1"
ruukh-codegen = { path = "./codegen" }
fnv = "1.0.6"

[dev-dependencies]
wasm-bindgen-test = "0.2.21"

[workspace]
members = [
    "codegen",
    "examples/hello_world",
    "examples/counter",
    "examples/counter_alt"
]

[patch.crates-io]
proc-macro2 = { git = "https://github.com/csharad/proc-macro2", branch = "feature_flagged" }
