[package]
name = "ruukh"
version = "0.1.0"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.21"
indexmap = "1.0.1"
ruukh-codegen = { path = "./codegen" }
fnv = "1.0.6"

[dependencies.web-sys]
version = "0.3.0"
features = [
    "Node", 
    "Element", 
    "Comment",
    "Text",
    "Window", 
    "Document", 
    "MessagePort", 
    "MessageChannel",
    "Event",
    "EventTarget"
]

[dev-dependencies]
wasm-bindgen-test = "0.2.21"

[workspace]
members = [
    "codegen",
    "examples/hello_world",
    "examples/counter",
    "examples/component",
    "examples/input",
    "examples/modules"
]

[patch.crates-io]
proc-macro2 = { git = "https://github.com/csharad/proc-macro2", branch = "feature_flagged" }
