[package]
name = "ruukh"
version = "0.0.2"
description = "An experimental next-gen frontend framework for the Web in Rust."
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/ruukh-codegen"
repository = "https://www.github.com/csharad/ruukh"
readme = "./README.md"
keywords = ["wasm", "frontend", "framework", "web"]
categories = ["wasm", "web-programming"]

[dependencies]
wasm-bindgen = "0.2.21"
indexmap = "1.0.1"
ruukh-codegen = { version = "0.0.2", path = "./codegen" }
fnv = "1.0.6"

[dependencies.web-sys]
version = "0.3.0"
features = [
    "Node", 
    "Element", 
    "Comment",
    "Text",
    "Window", 
    "Document", 
    "MessagePort", 
    "MessageChannel",
    "Event",
    "EventTarget"
]

[dev-dependencies]
wasm-bindgen-test = "0.2.21"

[workspace]
members = [
    "codegen",
    "examples/hello_world",
    "examples/counter",
    "examples/component",
    "examples/input",
    "examples/modules"
]
