[package]
name = "ruukh-codegen"
version = "0.1.0"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4.19", features = ["procmacro2_semver_exempt"] }
syn = { version = "0.15.1", features = ["full", "extra-traits"] }
quote = "0.6.8"
heck = "0.3.0"

[dev-dependencies]
ruukh = { path = "../" }

[dev-dependencies.web-sys]
version = "0.3.0"
features = [
    "Event",
]
