[package]
name = "ruukh-codegen"
version = "0.0.3"
description = "Codegen for the Ruukh framework."
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://www.github.com/csharad/ruukh"
readme = "../README.md"
keywords = ["codegen", "wasm", "frontend", "framework", "ruukh"]
categories = ["wasm", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.19"
syn = { version = "0.15.1", features = ["full", "extra-traits"] }
quote = "0.6.8"
heck = "0.3.0"
