[package]
name = "counter_alt"
version = "0.1.0"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ruukh = { path = "../../" }
wasm-bindgen = "0.2.21"

[dependencies.web-sys]
version = "0.3.0"
features = [
    "Event",
]

[patch.crates-io]
proc-macro2 = { git = "https://github.com/csharad/proc-macro2", branch = "feature_flagged" }
