[package]
name = "input"
version = "0.1.0"
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ruukh = { path = "../../" }
wasm-bindgen = "0.2.21"

[dependencies.web-sys]
version = "0.3.0"
features = [
    "Event",
    "EventTarget",
    "HtmlInputElement"
]
